--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="wip">
-      <p>Work in Progress! Come Back Later.</p>
+      <p>WILL UPDATE YOU SOON</p>
     </div>
   </body>
 </html>
